Keep zoom centered and scatter move events to avoid overlaps

--- a/style.css
+++ b/style.css
@@ -11,6 +11,10 @@ body {
   touch-action: none;
 }
 
+body * {
+  user-select: none;
+}
+
 #chart-container {
   width: 100%;
   height: 450px;
